slider functions completed suing slick css

--- a/resources/templates/slideshow.html
+++ b/resources/templates/slideshow.html
@@ -8,11 +8,12 @@
     <meta name="author" content="SitePoit">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css">
-    <link rel="stylesheet" href="../../static/sass/css/slideshow.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css">
     <script src="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>
-    <script src="http://hydrolog.weblider24.pl/wp-content/themes/taco/js/js-sliderWithProgressbar.js"></script>
+    <link rel="stylesheet" href="../../static/sass/css/slideshow.css">
+
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -20,46 +21,60 @@
 
 <body>
     <div class="wrapper">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div id="product__slider">
-                        <div class="product__slider-main">
-                            <div class="slide">
-                                <img src="http://dummyimage.com/300" alt="" class="img-responsive">
-                            </div>
-                            <div class="slide">
-                                <img src="http://dummyimage.com/300" alt="" class="img-responsive">
-                            </div>
-                            <div class="slide">
-                                <img src="http://dummyimage.com/300" alt="" class="img-responsive">
-                            </div>
-                            <div class="slide">
-                                <img src="http://dummyimage.com/300" alt="" class="img-responsive">
-                            </div>
-                        </div>
-                        <div class="product__slider-thmb">
-                            <div class="slide">
-                                <img src="http://dummyimage.com/300" alt="" class="img-responsive">
-                            </div>
-                            <div class="slide">
-                                <img src="http://dummyimage.com/300" alt="" class="img-responsive">
-                            </div>
-                            <div class="slide">
-                                <img src="http://dummyimage.com/300" alt="" class="img-responsive">
-                            </div>
-                            <div class="slide">
-                                <img src="http://dummyimage.com/300" alt="" class="img-responsive">
-                            </div>
-                        </div>
-                    </div>
+        <div id="product__slider">
+            <div class="product__slider-main">
+                <div class="slide">
+                    <img class="main-images" src="./../../static/images/content/shutterstock_255577192.jpg" alt="" class="img-responsive">
                 </div>
+                <div class="slide">
+                    <img class="main-images" src="./../../static/images/content/BMW-i8-by-AC-Schnitzer-2.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img class="main-images" src="./../../static/images/content/shutterstock_259220579.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img class="main-images" src="./../../static/images/content/Ferrari-LaFerrari-Spider-Autovisie.nl-3.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img class="main-images" src="./../../static/images/content/_ WEB/autoglans.png" alt="" class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img class="main-images" src="./../../static/images/content/ferrari-gtc4lusso-is-nieuwe-ff-f-08022016143947-8935.jpg" alt=""
+                        class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img class="main-images" src="./../../static/images/content/shutterstock_295221404.jpg" alt="" class="img-responsive">
+                </div>
+
+            </div>
+            <div class="product__slider-thmb">
+                <div class="slide">
+                    <img src="./../../static/images/content/shutterstock_255577192.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img src="./../../static/images/content/BMW-i8-by-AC-Schnitzer-2.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img src="./../../static/images/content/shutterstock_259220579.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img src="./../../static/images/content/Ferrari-LaFerrari-Spider-Autovisie.nl-3.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img src="./../../static/images/content/_ WEB/autoglans.png" alt="" class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img src="./../../static/images/content/ferrari-gtc4lusso-is-nieuwe-ff-f-08022016143947-8935.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="slide">
+                    <img src="./../../static/images/content/shutterstock_295221404.jpg" alt="" class="img-responsive">
+                </div>
+
             </div>
         </div>
 
     </div>
 
-    <!-- for swipe support on touch interfaces -->
     <script src="../../static/js/slideshow.js"></script>
 
 </body>
