--- a/static/sass/slideshow.sass
+++ b/static/sass/slideshow.sass
@@ -1,7 +1,50 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+ * v2.0 | 20110126
+ * License: none (public domain)
+
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video
+  margin: 0
+  padding: 0
+  border: 0
+  font-size: 100%
+  font: inherit
+  vertical-align: baseline
+
+/* HTML5 display-role reset for older browsers
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section
+  display: block
+
+body
+  line-height: 1
+
+ol, ul
+  list-style: none
+
+blockquote, q
+  quotes: none
+
+blockquote
+  &:before, &:after
+    content: ''
+    content: none
+
+q
+  &:before, &:after
+    content: ''
+    content: none
+
+table
+  border-collapse: collapse
+  border-spacing: 0
+
 .product__slider-main
-  margin-bottom: 15px
+  overflow: hidden
+  width: 100vw
+  max-height: 800px
   img
-    margin: 0 auto
+    width: 100%
+
 
 .product__slider-thmb .slick-slide
   opacity: 0.5
@@ -11,3 +54,21 @@
 
 .product__slider-main, .product__slider-thmb
   display: none
+
+.product__slider-main
+  overflow: hidden
+
+.product__slider-thmb
+  opacity: 1
+  positon: relative
+  top: -200px
+
+.product__slider-thmb .slide
+  width: 200px
+  height: 200px
+
+.product__slider-thmb .slide img
+  height: 300px
+
+.product__slider-thmb .slide img    
+    width: 100%
