--- a/resources/templates/slideshow.html
+++ b/resources/templates/slideshow.html
@@ -24,25 +24,60 @@
         <div id="product__slider">
             <div class="product__slider-main">
                 <div class="slide">
+                    <artcile class="over-image title bold yellow feature-bottom-right">CAR CLEANING EPE
+                        <br>
+                        <span class="white thin">IS HET FULL SERVICE
+                            <br>POETSBEDRIJF.</span>
+                    </artcile>
                     <img class="main-images" src="./../../static/images/content/shutterstock_255577192.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="slide">
+                    <artcile class="over-image title bold yellow feature-top-left">CAR CLEANING EPE
+                        <br>
+                        <span class="white thin">IS HET FULL SERVICE
+                            <br>POETSBEDRIJF.</span>
+                    </artcile>
                     <img class="main-images" src="./../../static/images/content/BMW-i8-by-AC-Schnitzer-2.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="slide">
+                    <artcile class="over-image title bold yellow feature-bottom-right">CAR CLEANING EPE
+                        <br>
+                        <span class="white thin">IS HET FULL SERVICE
+                            <br>POETSBEDRIJF.</span>
+                    </artcile>
                     <img class="main-images" src="./../../static/images/content/shutterstock_259220579.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="slide">
+                    <artcile class="over-image title bold yellow feature-top-left">CAR CLEANING EPE
+                        <br>
+                        <span class="white thin">IS HET FULL SERVICE
+                            <br>POETSBEDRIJF.</span>
+                    </artcile>
                     <img class="main-images" src="./../../static/images/content/Ferrari-LaFerrari-Spider-Autovisie.nl-3.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="slide">
+                    <artcile class="over-image title bold yellow feature-bottom-right">CAR CLEANING EPE
+                        <br>
+                        <span class="white thin">IS HET FULL SERVICE
+                            <br>POETSBEDRIJF.</span>
+                    </artcile>
                     <img class="main-images" src="./../../static/images/content/_ WEB/autoglans.png" alt="" class="img-responsive">
                 </div>
                 <div class="slide">
+                    <artcile class="over-image title bold yellow feature-top-left">CAR CLEANING EPE
+                        <br>
+                        <span class="white thin">IS HET FULL SERVICE
+                            <br>POETSBEDRIJF.</span>
+                    </artcile>
                     <img class="main-images" src="./../../static/images/content/ferrari-gtc4lusso-is-nieuwe-ff-f-08022016143947-8935.jpg" alt=""
                         class="img-responsive">
                 </div>
                 <div class="slide">
+                    <artcile class="over-image title bold yellow feature-bottom-right">CAR CLEANING EPE
+                        <br>
+                        <span class="white thin">IS HET FULL SERVICE
+                            <br>POETSBEDRIJF.</span>
+                    </artcile>
                     <img class="main-images" src="./../../static/images/content/shutterstock_295221404.jpg" alt="" class="img-responsive">
                 </div>
 
