--- a/static/sass/css/slideshow.css
+++ b/static/sass/css/slideshow.css
@@ -35,11 +35,12 @@ table {
   border-spacing: 0; }
 
 .product__slider-main {
-  overflow: hidden;
   width: 100vw;
-  max-height: 800px; }
+  max-height: 600px;
+  overflow: hidden; }
   .product__slider-main img {
-    width: 100%; }
+    width: 100%;
+    height: 100%; }
 
 .product__slider-thmb .slick-slide {
   opacity: 0.5;
@@ -51,19 +52,50 @@ table {
   display: none; }
 
 .product__slider-main {
+  position: relative;
   overflow: hidden; }
 
 .product__slider-thmb {
   opacity: 1;
-  positon: relative;
-  top: -200px; }
+  bottom: 0;
+  z-index: 1001; }
 
 .product__slider-thmb .slide {
   width: 200px;
-  height: 200px; }
+  height: 200px;
+  max-height: 200px;
+  overflow: hidden; }
 
 .product__slider-thmb .slide img {
-  height: 300px; }
+  width: 100%;
+  min-height: 100%; }
 
-.product__slider-thmb .slide img {
-  width: 100%; }
+.over-image {
+  position: absolute;
+  z-index: 10001; }
+
+.title {
+  font-family: 'segoe ui';
+  font-size: 4vw; }
+
+.thin {
+  font-weight: 400; }
+
+.bold {
+  font-weight: 600; }
+
+.yellow {
+  color: yellow; }
+
+.white {
+  color: #FFFFFF; }
+
+.feature-bottom-right {
+  position: absolute;
+  margin-left: 50vw;
+  margin-top: 30vh; }
+
+.feature-top-left {
+  position: absolute;
+  margin-left: 10vw;
+  margin-top: 5vh; }
